--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
       <div id="teamsContainer"> <!-- Wrapper for table centering -->
         <div class="columns hidden">
           <div class="column custom-column">
-            <h2 class="hidden">Team A</h2>
-            <table class="table is-bordered is-fullwidth">
-              <tbody id="teamATable"></tbody>
-            </table>
+            <div class="box hidden">
+              <h2 class="subtitle hidden">Team A</h2>
+              <table class="table is-bordered is-fullwidth">
+                <tbody id="teamATable"></tbody>
+              </table>
+            </div>
           </div>
-          <div class="column hidden" id="vsText" >VS</div> <!-- VS text -->
+          <div class="column hidden title" id="vsText" >VS</div> <!-- VS text -->
           <div class="column custom-column">
-            <h2 class="hidden">Team B</h2>
-            <table class="table is-bordered is-fullwidth">
-              <tbody id="teamBTable"></tbody>
-            </table>
+            <div class="box hidden">
+              <h2 class="subtitle hidden">Team B</h2>
+              <table class="table is-bordered is-fullwidth">
+                <tbody id="teamBTable"></tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
