--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="columns hidden">
           <div class="column custom-column">
             <div class="box hidden">
-              <h2 class="subtitle hidden">Team A</h2>
+              <h2 class="subtitle hidden">Time 1</h2>
               <table class="table is-bordered is-fullwidth">
                 <tbody id="teamATable"></tbody>
               </table>
@@ -31,7 +31,7 @@
           <div class="column hidden title" id="vsText" >VS</div> <!-- VS text -->
           <div class="column custom-column">
             <div class="box hidden">
-              <h2 class="subtitle hidden">Team B</h2>
+              <h2 class="subtitle hidden">Time 2</h2>
               <table class="table is-bordered is-fullwidth">
                 <tbody id="teamBTable"></tbody>
               </table>
